# ArquiteIA

./: README.md  requirements.txt  results.json  testar.txt
ai_trainer/: dataset_generator.py  optimize_tile.py
ai_trainer/saved_models/: README.md
api_orchestrator/: database.py  dependencies.py  main.py
api_orchestrator/tests/: test_api.py
backend_simulator/: CMakeLists.txt  cmake_vs14_log.txt  cmake_vs17_log.txt
backend_simulator/include/: arquiteia.hpp
backend_simulator/src/: arquiteia_bindings.cpp  cache_simulator.cpp  matmul_tiling.cpp
data/: cases.json
lms_integrator/: tool_definition.py  visualize.py
